Add serial driver and debug quitting from QEMU

--- a/example_os/Makefile
+++ b/example_os/Makefile
@@ -9,29 +9,39 @@ rust_lib := target/$(target)/debug/libexample_os.a
 asm_sources := $(wildcard src/$(arch)/*.asm)
 asm_objs := $(patsubst src/$(arch)/%.asm, build/$(arch)/%.o, $(asm_sources))
 
-.PHONY: clean cargo build_dir
+.PHONY: test clean cargo build_dir
+
+test: $(iso)
+	@# Debug exit on QEMU gives exit code 1, so we override it
+	@# We also cut the first 16 lines of the serial output, as it's just BIOS stuff
+	@qemu-system-x86_64 --no-reboot \
+					    -nographic \
+					    -display none \
+					    -device isa-debug-exit,iobase=0xf4,iosize=0x04 \
+					    -cdrom build/os-$(arch).iso \
+	| tail -n +16 > serial.txt || true
 
 $(iso): $(kernel) $(grub_cfg)
-	mkdir -p build/isofiles/boot/grub
-	cp $(kernel) build/isofiles/boot/kernel.bin
-	cp $(grub_cfg) build/isofiles/boot/grub
-	grub2-mkrescue -o $(iso) build/isofiles 2> /dev/null
-	rm -r build/isofiles
+	@mkdir -p build/isofiles/boot/grub
+	@cp $(kernel) build/isofiles/boot/kernel.bin
+	@cp $(grub_cfg) build/isofiles/boot/grub
+	@grub2-mkrescue -o $(iso) build/isofiles 2> /dev/null
+	@rm -r build/isofiles
 
 $(kernel): build_dir cargo $(rust_lib) $(asm_objs) $(linker_script)
-	ld -n --gc-sections -T $(linker_script) -o $(kernel) $(asm_objs) $(rust_lib)
+	@ld -n --gc-sections -T $(linker_script) -o $(kernel) $(asm_objs) $(rust_lib)
 
 cargo:
-	RUST_TARGET_PATH="$(shell pwd)" cargo xbuild --target $(target)
+	@RUST_TARGET_PATH="$(shell pwd)" cargo xbuild --target $(target)
 
 build_dir:
-	mkdir -p build
+	@mkdir -p build
 
 build/$(arch)/%.o: src/$(arch)/%.asm
-	mkdir -p $(shell dirname $@)
-	nasm -felf64 $< -o $@
+	@mkdir -p $(shell dirname $@)
+	@nasm -felf64 $< -o $@
 
 clean:
-	rm -rf build
-	rm -rf target
-	rm Cargo.lock
+	@rm -rf build
+	@rm -rf target
+	@rm Cargo.lock
