--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
   - rustup component add rustfmt-preview
 
 script:
-  - cargo fmt --all -- --write-mode=check
+  - cargo fmt --all -- --check
   - cargo build
   - cargo test
 
