--- a/example_os/Cargo.toml
+++ b/example_os/Cargo.toml
@@ -6,14 +6,21 @@ authors = ["Philipp Oppermann <dev@phil-opp.com>",
 
 [dependencies]
 bit_field = "0.7.0"
-bitflags = "0.9.1"
-multiboot2 = "0.1.0"
+bitflags = "1.0.3"
+#multiboot2 = "0.1.0"
 once = "0.3.2"
 rlibc = "1.0"
 spin = "0.4.5"
 volatile = "0.1.0"
 x86_64 = "0.1.2"
 linked_list_allocator = "0.6.*"
+
+# Until rust-osdev/multiboot2-elf64#45 lands, we patch with Pebble's repo
+[dependencies.multiboot2]
+git = "https://github.com/pebble-os/multiboot2-elf64"
+
+[dependencies.acpi]
+path = ".."
 
 [dependencies.lazy_static]
 features = ["spin_no_std"]
