--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ branches:
     # This allows building of pull requests
     - master
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq qemu-system
+
 before_script:
   - rustup component add rustfmt-preview
 
@@ -27,6 +31,7 @@ script:
   - cargo fmt --all -- --write-mode=check
   - cargo build
   - cargo test
+  - make -C example_os
 
 notifications:
   email: change
