--- a/.travis.yml
+++ b/.travis.yml
@@ -23,15 +23,19 @@ branches:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq qemu-system
+  - sudo apt-get install -qq nasm
+  - sudo apt-get install xorriso
 
 before_script:
   - rustup component add rustfmt-preview
+  - rustup component add rust-src
+  - cargo install cargo-xbuild
 
 script:
   - cargo fmt --all -- --write-mode=check
   - cargo build
   - cargo test
-  - make -C example_os
+  - make -C test_os grub_mkrescue=grub-mkrescue
 
 notifications:
   email: change
