--- a/test_os/Makefile
+++ b/test_os/Makefile
@@ -1,10 +1,11 @@
 arch ?= x86_64
-target := $(arch)-example-os
+target := $(arch)-test-os
 kernel := build/kernel-$(arch).bin
 iso := build/os-$(arch).iso
 linker_script := src/$(arch)/linker.ld
 grub_cfg := src/$(arch)/grub.cfg
-rust_lib := target/$(target)/debug/libexample_os.a
+rust_lib := target/$(target)/debug/libtest_os.a
+grub_mkrescue ?= grub2-mkrescue
 
 asm_sources := $(wildcard src/$(arch)/*.asm)
 asm_objs := $(patsubst src/$(arch)/%.asm, build/$(arch)/%.o, $(asm_sources))
@@ -18,19 +19,22 @@ test: $(iso)
 					    -nographic \
 					    -display none \
 					    -device isa-debug-exit,iobase=0xf4,iosize=0x04 \
-					    -cdrom build/os-$(arch).iso \
-	| tail -n +16 > serial.txt || true
+					    -cdrom build/os-$(arch).iso > serial.txt
 	@echo BEGIN SERIAL OUTPUT
 	@cat serial.txt
 	@echo END SERIAL OUTPUT
+	@cat serial.txt | tail -n +16 > serial_tail.txt
+	@echo BEGIN KERNEL SERIAL OUTPUT
+	@cat serial_tail.txt
+	@echo END KERNEL SERIAL OUTPUT
 	@# Now we test whether the output file has the string "Passed" in it
-	@grep -Fxq "Passed" serial.txt
+	@grep -Fxq "Passed" serial_tail.txt
 
 $(iso): $(kernel) $(grub_cfg)
 	@mkdir -p build/isofiles/boot/grub
 	@cp $(kernel) build/isofiles/boot/kernel.bin
 	@cp $(grub_cfg) build/isofiles/boot/grub
-	@grub2-mkrescue -o $(iso) build/isofiles 2> /dev/null
+	@$(grub_mkrescue) -o $(iso) build/isofiles
 	@rm -r build/isofiles
 
 $(kernel): build_dir cargo $(rust_lib) $(asm_objs) $(linker_script)
@@ -49,4 +53,5 @@ build/$(arch)/%.o: src/$(arch)/%.asm
 clean:
 	@rm -rf build
 	@rm -rf target
-	@rm Cargo.lock
+	@rm -f Cargo.lock
+	@rm -f serial.txt serial_tail.txt
