--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,10 @@ readme = "README.md"
 license = "MIT/Apache-2.0"
 
 [dependencies]
-log = "0.*"
 bit_field = "0.9.0"
+
+[target.'cfg(not(test))'.dependencies]
+log = "0.4.5"
+
+[target.'cfg(test)'.dependencies]
+log = { version = "0.4.5", features = ["std"] }
