--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,14 +8,10 @@ readme = "README.md"
 license = "MIT/Apache-2.0"
 
 [dependencies]
-bit_field = "0.9.0"
+bit_field = "0.9"
+log = "0.4"
 
 [features]
-default-features = []
+default = []
 debug_parser = []
-
-[target.'cfg(not(test))'.dependencies]
-log = "0.4.5"
-
-[target.'cfg(test)'.dependencies]
-log = { version = "0.4.5", features = ["std"] }
+running_on_ci = ["debug_parser", "log/std"]
