--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ repository = "https://github.com/rust-osdev/acpi"
 description = "Library for parsing ACPI tables and AML"
 readme = "README.md"
 license = "MIT/Apache-2.0"
+edition = "2018"
 
 [dependencies]
 log = "0.*"
