--- a/aml/Cargo.toml
+++ b/aml/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "aml_parser"
+name = "aml"
 version = "0.3.0"
 authors = ["Isaac Woods"]
 repository = "https://github.com/rust-osdev/acpi"
