--- a/acpi-dumper/Cargo.toml
+++ b/acpi-dumper/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "tools"
+name = "acpi-dumper"
 version = "0.0.0"
 publish = false
 authors = ["Isaac Woods", "Matt Taylor"]
 repository = "https://github.com/rust-osdev/acpi"
 description = "ACPI table dumper"
-categories = ["hardware-support", "no-std"]
+categories = ["hardware-support"]
 readme = "../README.md"
 license = "MIT/Apache-2.0"
 edition = "2018"
