--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -5,7 +5,7 @@ merge_imports = true
 imports_layout = "HorizontalVertical"
 use_field_init_shorthand = true
 use_try_shorthand = true
-format_doc_comments = true
+format_code_in_doc_comments = true
 wrap_comments = true
 max_width = 110
 comment_width = 110
