Parse Extended Interrupt Descriptor _CRS objects

--- a/aml/Cargo.toml
+++ b/aml/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 bit_field = "0.10"
+byteorder = { version = "1", default-features = false }
 
 [features]
 debug_parser = []
