--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,2 @@
 [workspace]
-members = ["rsdp_search", "acpi", "aml", "acpi-dumper", "aml_tester"]
+members = ["rsdp", "acpi", "aml", "acpi-dumper", "aml_tester"]
