--- a/aml/Cargo.toml
+++ b/aml/Cargo.toml
@@ -13,4 +13,5 @@ edition = "2018"
 log = "0.4"
 bit_field = "0.10"
 byteorder = { version = "1", default-features = false }
+bitvec = { version = "0.22.3", default-features = false, features = ["alloc", "atomic"] }
 spinning_top = "0.2.4"
