--- a/acpi/Cargo.toml
+++ b/acpi/Cargo.toml
@@ -10,6 +10,10 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-log = "0.4"
 bit_field = "0.10"
 rsdp = { version = "2", path = "../rsdp" }
+log = { version = "0.4", optional = true }
+
+[features]
+default = ["logging"]
+logging = ["log"]
