--- a/acpi/Cargo.toml
+++ b/acpi/Cargo.toml
@@ -13,3 +13,7 @@ edition = "2018"
 log = "0.4"
 bit_field = "0.10"
 rsdp = { version = "2", path = "../rsdp" }
+
+[features]
+default = ["alloc"]
+alloc = []
