--- a/aml/Cargo.toml
+++ b/aml/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2018"
 [dependencies]
 log = "0.4"
 bit_field = "0.10"
+num = "0.4"
 byteorder = { version = "1", default-features = false }
 bitvec = { version = "1.0.1", default-features = false, features = ["alloc", "atomic"] }
 spinning_top = "0.2.4"
