--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,5 @@
 unstable_features = true
-edition = "2018"
+edition = "2021"
 
 imports_granularity='Crate'
 imports_layout = "HorizontalVertical"
@@ -7,4 +7,4 @@ use_field_init_shorthand = true
 use_try_shorthand = true
 format_code_in_doc_comments = true
 max_width = 115
-use_small_heuristics = "max"
+use_small_heuristics = "Max"
