acpi: add `alloc` feature for easy use of the global allocator
Most people won't care much about the "new" `allocator_api` work, so add
`new` methods that just use the globally-set allocator too.

--- a/acpi/Cargo.toml
+++ b/acpi/Cargo.toml
@@ -15,5 +15,6 @@ log = "0.4"
 rsdp = { version = "2", path = "../rsdp" }
 
 [features]
-default = ["allocator_api"]
+default = ["allocator_api", "alloc"]
 allocator_api = []
+alloc = ["allocator_api"]
