--- a/acpi/Cargo.toml
+++ b/acpi/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "acpi"
-version = "4.1.1"
+version = "5.0.0"
 authors = ["Isaac Woods"]
 repository = "https://github.com/rust-osdev/acpi"
-description = "Library for parsing ACPI tables"
+description = "A pure-Rust library for parsing ACPI tables"
 categories = ["hardware-support", "no-std"]
 readme = "../README.md"
 license = "MIT/Apache-2.0"
