--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["rsdp", "acpi", "aml", "acpi-dumper", "aml_tester"]
+members = ["acpi", "aml", "tools/aml_tester", "tools/acpi_dumper"]
 resolver = "2"
