--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
       run: cargo test --all
 
     - name: Run AML test suite
-      run: cargo run --bin aml_tester -- -p tests --reset
+      run: cargo run_tests -p tests
 
   clippy:
     runs-on: ubuntu-latest
