--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,5 +79,8 @@ jobs:
         profile: minimal
         components: clippy
 
-    - name: Run clippy
+    - name: Run clippy (ACPI)
       run: cargo clippy -p acpi
+
+    - name: Run clippy (AML)
+      run: cargo clippy -p aml
