ci: run clippy on aml crate tests
Now that all warnings have been fixed for the aml crate tests, run
clippy as part of CI.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,3 +84,6 @@ jobs:
 
     - name: Run clippy (AML)
       run: cargo clippy -p aml
+
+    - name: Run clippy (AML tests)
+      run: cargo clippy -p aml --tests
