ci: run clippy on acpi crate tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,9 @@ jobs:
     - name: Run clippy (ACPI)
       run: cargo clippy -p acpi
 
+    - name: Run clippy (ACPI tests)
+      run: cargo clippy -p acpi --tests
+
     - name: Run clippy (AML)
       run: cargo clippy -p aml
 
