aml: fix clippy warnings and run clippy in CI (#237)
* aml: fix all clippy warnings

* ci: run clippy on aml crate

Now that all warnings have been fixed for the aml crate, run clippy as
part of CI. Once the warnings for the rest of the crates are fixed, they
can be included in the CI run.

* aml: tests: fix all clippy warnings

* ci: run clippy on aml crate tests

Now that all warnings have been fixed for the aml crate tests, run
clippy as part of CI.

* ci: run clippy on acpi crate tests

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,5 +79,14 @@ jobs:
         profile: minimal
         components: clippy
 
-    - name: Run clippy
+    - name: Run clippy (ACPI)
       run: cargo clippy -p acpi
+
+    - name: Run clippy (ACPI tests)
+      run: cargo clippy -p acpi --tests
+
+    - name: Run clippy (AML)
+      run: cargo clippy -p aml
+
+    - name: Run clippy (AML tests)
+      run: cargo clippy -p aml --tests
