--- a/aml/Cargo.toml
+++ b/aml/Cargo.toml
@@ -12,3 +12,4 @@ license = "MIT/Apache-2.0"
 [dependencies]
 spinning_top = "0.3.0"
 bit_field = "0.10.2"
+byteorder = { version = "1.5.0", default-features = false }
