--- a/aml/Cargo.toml
+++ b/aml/Cargo.toml
@@ -13,3 +13,5 @@ license = "MIT/Apache-2.0"
 spinning_top = "0.3.0"
 bit_field = "0.10.2"
 byteorder = { version = "1.5.0", default-features = false }
+log = "0.4"
+pci_types = "0.10.0"
