--- a/acpi/Cargo.toml
+++ b/acpi/Cargo.toml
@@ -3,11 +3,11 @@ name = "acpi"
 version = "5.2.0"
 authors = ["Isaac Woods"]
 repository = "https://github.com/rust-osdev/acpi"
-description = "A pure-Rust library for parsing ACPI tables"
+description = "A pure-Rust library for interacting with ACPI"
 categories = ["hardware-support", "no-std"]
 readme = "../README.md"
 license = "MIT/Apache-2.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 bit_field = "0.10.2"
