--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ resolver = "2"
 
 [package]
 name = "acpi"
-version = "6.0.0"
+version = "6.0.1"
 authors = ["Isaac Woods"]
 repository = "https://github.com/rust-osdev/acpi"
 description = "A pure-Rust library for interacting with ACPI"
@@ -17,10 +17,10 @@ bit_field = "0.10.2"
 bitflags = "2.5.0"
 log = "0.4.20"
 spinning_top = "0.3.0"
-pci_types = { version = "0.10.0", public = true, optional = true }
+pci_types = { version = "0.10.0", public = true }
 byteorder = { version = "1.5.0", default-features = false }
 
 [features]
 default = ["alloc", "aml"]
 alloc = []
-aml = ["alloc", "pci_types"]
+aml = ["alloc"]
